# chain-procurement-wallet

./: .gitignore  CMakeLists.txt  CMakeLists.txt.test  CMakelists.txt  Config.h.in  README.md  compile.sh  t.txt
include/: core.h  core.hpp  transaction.hpp  wallet.h  wallet.hpp
scripts/: build.sh  install-deps.sh
src/: Core.cpp  core.cpp  main.c  main.cpp  transaction.cpp  wallet.cpp
